[metadata]
name = disk-growth
version = 0.0.1
author = Michael Engelbrecht
author_email = michaelndani@gmail.com
description = Disk Growth is a python-based wrapper of the well-known 'du', that provides an easy way to monitor folder growth by keeping a history of folder scans and showing "what's changed".
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Documentation = https://github.com/miking7/disk-growth
    Source = https://github.com/miking7/disk-growth
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    simple-term-menu
    python-box[PyYAML]
    debugpy
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    disk-growth = diskgrowth:main
    dgrowth = diskgrowth:main

